--- a/keyid.yaml
+++ b/keyid.yaml
@@ -72,6 +72,6 @@ components:
       type: oauth2
       flows:
         clientCredentials:
-          tokenUrl: https://login.microsoftonline.com/{tenant}/oauth2/v2.0/token
+          tokenUrl: https://login.microsoftonline.com/{tenantid}/oauth2/v2.0/token
           scopes:
-            https://graph.microsoft.com/.default: Access Microsoft Graph
+            https://graph.microsoft.com/.default:
